--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
             printButton.style.display = 'none'; // Hide print button initially
 
             try {
-                const response = await fetch('/print', {
+                const response = await fetch('/api/print', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
