--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify({ url: imageUrl })
+                    body: JSON.stringify({ filePath: imageUrl,printerName:"DS-RX1" })
                 });
 
                 const data = await response.json();
